testsuite/tests/grammar/invalid_lkt/unknown_rule_annot.lkt
grammar FooGrammar {
    @main_rule rule1 <- Example("example")
    @foo rule2 <- Example("example")
}
